kustomization/components/longhorn/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-prometheus-to-longhorn-manager-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: manager
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
